--- a/client/requirements.txt
+++ b/client/requirements.txt
@@ -1,13 +1,7 @@
-typing-extensions>=4.5.0
-pytest>=7.3.1
-websockets>=10.4
+# Build dependencies for creating installers
 pyinstaller>=6.1.0
-cryptography>=39.0.0
-python-dotenv>=1.0.0
-PyQt6>=6.4.0
-darkdetect>=0.7.1
-psutil>=5.9.0
-requests>=2.28.0
-semver>=3.0.0
 dmgbuild>=1.6.1  # For creating DMG installers
 py2app>=0.28.0  # For macOS app bundling
+
+# Install main project dependencies
+-r ../requirements.txt
