--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
+# Core dependencies
 PyQt6>=6.4.0
+PySide6>=6.4.0  # Required for resource compilation
 websockets>=10.4
 python-dotenv>=1.0.0
 mysql-connector-python>=8.0.32
 bcrypt>=4.0.1
 darkdetect>=0.8.0
 cryptography>=40.0.0
+requests>=2.28.0
+psutil>=5.9.0
+semver>=3.0.0
+
+# Testing dependencies
+pytest>=7.3.1
+typing-extensions>=4.5.0
